fixed profile picture upload

--- a/EasyLearn/Views/Admin/Detail.cshtml
+++ b/EasyLearn/Views/Admin/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@using EasyLearn.Models.Entities
+﻿
 @model EasyLearn.Models.DTOs.AdminDTOs.AdminResponseModel
 
 @{
@@ -11,7 +11,7 @@
     <div class="col-sm-11">
        
         @* <table class="table table-hover"> *@
-        <table class="table table-hover table-striped table-borderless ">
+        <table class="table table-hover able-striped table-borderless ">
             <thead>
             <tr>
                 <th scope="col"></th>
