--- a/EasyLearn/Views/Admin/Create.cshtml
+++ b/EasyLearn/Views/Admin/Create.cshtml
@@ -2,7 +2,7 @@
 @model EasyLearn.Models.DTOs.UserDTOs.CreateUserRequestModel
 
 @{
-    ViewBag.Title = "EasyLearn || Register new admin";
+    //ViewBag.Title = "EasyLearn || Register new admin";
     Layout = "_Layout";
 }
 
@@ -61,7 +61,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(x => x.formFile, new { @class = "" })
+                @Html.LabelFor(x => x.FormFile, new { @class = "" })
                 @*<label for="file">Choose file</label>*@
                 <input type="file" name="formFile" id="formFile" />
             </div>
