--- a/EasyLearn/Views/Admin/Detail.cshtml
+++ b/EasyLearn/Views/Admin/Detail.cshtml
@@ -2,7 +2,7 @@
 @model EasyLearn.Models.DTOs.AdminDTOs.AdminResponseModel
 
 @{
-    ViewBag.Title = "title";
+    //ViewBag.Title = "title";
     Layout = "_Layout";
 }
 
