--- a/EasyLearn/Views/Admin/UpdateProfile.cshtml
+++ b/EasyLearn/Views/Admin/UpdateProfile.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EasyLearn.Models.DTOs.AdminDTOs.AdminResponseModel
 
 @{
-    ViewBag.Title = "title";
+    //ViewBag.Title = "title";
     Layout = "_Layout";
 }
 
