Universal theme for asp net

--- a/EasyLearn/Views/Admin/UpdateBankDetail.cshtml
+++ b/EasyLearn/Views/Admin/UpdateBankDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model EasyLearn.Models.DTOs.PaymentDetailDTOs.PaymentDetailDTO
+﻿@model EasyLearn.Models.DTOs.PaymentDetailDTOs.PaymentDetailRequestModel
 
 @{
     //ViewBag.Title = "title";
@@ -15,23 +15,23 @@
             <div class="card-body">
                 <form method="POST">
                     <p>Check the details carefully before clicking on the Update button</p>
-                    <input name="Id" value="@Model.Id" type="hidden" />
+                    <input name="Id" value="@Model.Data.Id" type="hidden" />
                     <div>
-                        @Html.DisplayNameFor(x => x.BankName)
-                        <input name="BankName" value="@Model.BankName" type="text" class="form-control" required />
+                        @Html.DisplayNameFor(x => x.Data.BankName)
+                        <input name="BankName" value="@Model.Data.BankName" type="text" class="form-control" required />
                     </div>
                     <div>
-                        <label asp-for="AccountNumber" class="control-label"></label>
-                        <input name="AccountNumber" value="@Model.AccountNumber" type="text" class="form-control" required />
+                        <label asp-for="Data.AccountNumber" class="control-label"></label>
+                        <input name="AccountNumber" value="@Model.Data.AccountNumber" type="text" class="form-control" required />
                     </div>
                     <div>
-                        <label asp-for="AccountName" class="control-label"></label>
-                        <input name="AccountName" value="@Model.AccountName" type="text" class="form-control" required />
+                        <label asp-for="Data.AccountName" class="control-label"></label>
+                        <input name="AccountName" value="@Model.Data.AccountName" type="text" class="form-control" required />
                     </div>
 
                     <div>
-                        <label asp-for="AccountType" class="control-label"></label>
-                        <input name="AccountType" value="@Model.AccountType" type="text" class="form-control" required />
+                        <label asp-for="Data.AccountType" class="control-label"></label>
+                        <input name="AccountType" value="@Model.Data.AccountType" type="text" class="form-control" required />
                     </div>
 
 
