--- a/EasyLearn/Views/Instructor/DeletePreview.cshtml
+++ b/EasyLearn/Views/Instructor/DeletePreview.cshtml
@@ -1,4 +1,4 @@
-﻿@model EasyLearn.Models.DTOs.AdminDTOs.AdminResponseModel
+﻿@model EasyLearn.Models.DTOs.InstructorDTOs.InstructorResponseModel
 
 @{
     //ViewBag.Title = "title";
