--- a/EasyLearn/Views/Instructor/GetAll.cshtml
+++ b/EasyLearn/Views/Instructor/GetAll.cshtml
@@ -48,7 +48,7 @@
                             </td>
 
                             <td>
-                                <a asp-action="UpdateProfile" asp-route-id="@item.Id" class="btn btn-info">Update</a>
+                                <a asp-action="ListOfBankDetail" asp-route-id="@item.Id" class="btn btn-info">Update</a>
                             </td>
 
                         </tr>
