--- a/EasyLearn/Views/Admin/ListOfBankDetail.cshtml
+++ b/EasyLearn/Views/Admin/ListOfBankDetail.cshtml
@@ -20,46 +20,7 @@
                 </form>
             </div>
 
-            <!-- search box  -->
-            <div class="search-container">
-                <form asp-controller="Attendant" asp-action="GetByName">
-                    <input type="text" placeholder="Attendant Name..." name="name">
-                    <button type="submit">
-                        <i class="fa fa-search"></i> Search
-                    </button>
-                </form>
-            </div>
-
         </div>
-
-        <div class="col-sm- 1">
-
-
-            <div class="search-container-side">
-
-                <!-- search box  -->
-                <div class="search-container">
-                    <form asp-controller="Attendant" asp-action="GetByStaffId">
-                        <input type="text" placeholder="Attendant Id.." name="staffId">
-                        <button type="submit">
-                            <i class="fa fa-search"></i> Search
-                        </button>
-                    </form>
-                </div>
-
-                <!-- search box  -->
-                <div class="search-container">
-                    <form asp-controller="Attendant" asp-action="GetByName">
-                        <input type="text" placeholder="Attendant Name..." name="name">
-                        <button type="submit">
-                            <i class="fa fa-search"></i> Search
-                        </button>
-                    </form>
-                </div>
-
-            </div>
-        </div>
-
 
     </div>
     <div class="col-sm-11">
@@ -89,20 +50,19 @@
                     {
                         <tr>
                             <th scope="row">@serialNumber </th>
-                            <td>@item.BankName</td>
+                            <td>@item.AccountName</td>
                             <td>@item.AccountNumber</td>
                             <td>@item.AccountName</td>
                             <td>@item.AccountType</td>
+                            <td>@item.AccountType</td>
                             <td>
-                                <a asp-action="Detail" asp-route-id="@item.Id" class="btn btn-success">Detail</a>
+                                <a asp-action="" asp-route-id="@item.Id" class="btn btn-success">Detail</a>
                             </td>
                             <td>
-                                <a asp-action="DeletePreview" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                                <a asp-action="" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                             </td>
                             <td>
-                                <a asp-action="UpdateProfile" asp-route-id="@item.Id" class="btn btn-info">Profile</a>
-                                <a asp-action="UpdateAddressDetail" asp-route-id="@item.Id" class="btn btn-info">Address</a>
-                                <a asp-action="UpdateBankDetail" asp-route-id="@item.Id" class="btn btn-info">Bank</a>
+                                <a asp-action="UpdateBankDetail" asp-route-id="@item.Id" class="btn btn-info">Edit Bank Details </a>
                             </td>
                         </tr>
 
