--- a/EasyLearn/Views/Instructor/Create.cshtml
+++ b/EasyLearn/Views/Instructor/Create.cshtml
@@ -11,7 +11,7 @@
 <h2>titletitle</h2>
 <div class="row">
     <div class="col-md-4 text-center">
-        @using (Html.BeginForm("Create", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("Create", "Instructor", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             <div class="form-group">
                 @Html.LabelFor(x => x.FirstName, new { @class = "form-label" })
