--- a/EasyLearn/Views/Course/DeletePreview.cshtml
+++ b/EasyLearn/Views/Course/DeletePreview.cshtml
@@ -65,6 +65,10 @@
             </tbody>
 
         </table>
+        <div>
+            <a asp-action="Delete" asp-route-id="@Model.Data.Id" class="btn btn-danger">Confirm Delete</a>
+            <a class="btn btn-info" asp-action="UpdateProfile" asp-route-id="@Model.Data.Id">Update</a>
 
+        </div>
     </div>
 </div>
