--- a/EasyLearn/Views/Course/GetAllActive.cshtml
+++ b/EasyLearn/Views/Course/GetAllActive.cshtml
@@ -52,7 +52,7 @@
                             </td>
 
                             <td>
-                                <a asp-action="Update" asp-route-id="@item.Id" class="btn btn-info">Update</a>
+                                <a asp-action="" asp-route-id="" class="btn btn-info">More..</a>
                             </td>
 
                         </tr>
