--- a/EasyLearn/Views/Home/Testing.cshtml
+++ b/EasyLearn/Views/Home/Testing.cshtml
@@ -1,5 +1,44 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using EasyLearn.Models.DTOs.EmailSenderDTOs;
+@model EmailSenderAttachmentDTO
+
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Testing" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="ReceiverName" class="control-label"></label>
+                <input asp-for="ReceiverName" class="form-control" />
+            </div>
+
+
+            <div class="form-group">
+                <label asp-for="ReceiverEmail" class="control-label"></label>
+                <input asp-for="ReceiverEmail" class="form-control" />
+            </div>
+
+
+            <div class="form-group">
+                <label asp-for="Messages" class="control-label"></label>
+                <input asp-for="Messages" class="form-control" />
+            </div>
+
+
+            <div class="form-group">
+                <label asp-for="Subject" class="control-label"></label>
+                <input asp-for="Subject" class="form-control" />
+            </div>
+
+
+            <div class="form-group">
+                <label asp-for="FIleName" class="control-label"></label>
+                <input asp-for="FIleName" class="form-control" />
+            </div>
+
+
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
