--- a/EasyLearn/Views/Module/Create.cshtml
+++ b/EasyLearn/Views/Module/Create.cshtml
@@ -59,7 +59,7 @@
 
                 <div class="form-group">
                     <label for="file">Choose file</label>
-                    <input type="file" name="formFiles" id="formFiles" multiple required />
+                    <input type="file" name="formFiles" id="formFiles" multiple  />
                 </div>
 
                 <div class="form-group">
