--- a/EasyLearn/Views/Home/Testing.cshtml
+++ b/EasyLearn/Views/Home/Testing.cshtml
@@ -19,8 +19,8 @@
 
 
             <div class="form-group">
-                <label asp-for="Messages" class="control-label"></label>
-                <input asp-for="Messages" class="form-control" />
+                <label asp-for="Body" class="control-label"></label>
+                <input asp-for="Body" class="form-control" />
             </div>
 
 
