--- a/EasyLearn/Views/Shared/Layouts/_layout_boxed.cshtml
+++ b/EasyLearn/Views/Shared/Layouts/_layout_boxed.cshtml
@@ -3,8 +3,8 @@
 
 <head>
 
-    @Html.Partial("~/Views/Shared/_title_meta.cshtml")
-    @Html.Partial("~/Views/Shared/_head_css.cshtml")
+    <partial name="~/Views/Shared/_title_meta.cshtml"/>
+    <partial name="~/Views/Shared/_head_css.cshtml"/>
 
 </head>
 
@@ -13,8 +13,8 @@
     <!-- Begin page -->
     <div id="layout-wrapper">
 
-        @Html.Partial("~/Views/Shared/_topbar.cshtml")
-        @Html.Partial("~/Views/Shared/_sidebar.cshtml")
+        <partial name="~/Views/Shared/_topbar.cshtml"/>
+        <partial name="~/Views/Shared/_sidebar.cshtml"/>
 
         <!-- ============================================================== -->
         <!-- Start right Content here -->
@@ -23,22 +23,22 @@
         <div class="main-content">
             <div class="page-content">
                 <div class="container-fluid">
-                    @Html.Partial("~/Views/Shared/_page_title.cshtml")
+                    <partial name="~/Views/Shared/_page_title.cshtml"/>
 
                     @RenderBody()
                 </div> <!-- container-fluid -->
             </div>
             <!-- End Page-content -->
 
-            @Html.Partial("~/Views/Shared/_footer.cshtml")
+            <partial name="~/Views/Shared/_footer.cshtml"/>
         </div>
         <!-- end main content-->
 
     </div>
     <!-- END layout-wrapper -->
-    @Html.Partial("~/Views/Shared/_right_sidebar.cshtml")
+    <partial name="~/Views/Shared/_right_sidebar.cshtml"/>
 
-    @*@Html.Partial("~/Views/_Shared/_vendor_scripts.cshtml")*@
+    @*<partial name="~/Views/_Shared/_vendor_scripts.cshtml"/>*@
 
     @RenderSection("scripts", required: false)
 
