--- a/EasyLearn/Views/Shared/Layouts/_layout_light_sidebar.cshtml
+++ b/EasyLearn/Views/Shared/Layouts/_layout_light_sidebar.cshtml
@@ -1,10 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims;
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
 
-    @Html.Partial("~/Views/Shared/_title_meta.cshtml")
-    @Html.Partial("~/Views/Shared/_head_css.cshtml")
+    <partial name="~/Views/Shared/_title_meta.cshtml"/>
+    <partial name="~/Views/Shared/_head_css.cshtml"/>
 
 </head>
 
@@ -13,27 +15,30 @@
     <!-- Begin page -->
     <div id="layout-wrapper">
 
-        @Html.Partial("~/Views/Shared/_topbar.cshtml")
-        @Html.Partial("~/Views/Shared/_sidebar.cshtml") 
+        <partial name="~/Views/Shared/_topbar.cshtml"/>
+        @if (User.FindFirst(ClaimTypes.Role)?.Value == "Admin")
+        {
+            <partial name="~/Views/Shared/_sidebar.cshtml"/>
+        }
         @*This is the original sidebar located*@
 
         <!-- ============================================================== -->
         <!-- Start right Content here -->
         <!-- ============================================================== -->
 
-        <div class="main-content">
+        @*<div class="main-content">*@
             <div class="page-content">
                 <div class="container-fluid">
 
-                    @Html.Partial("~/Views/Shared/_page_title.cshtml")
+                    <partial name="~/Views/Shared/_page_title.cshtml"/>
 
                     @RenderBody()
 
-                </div> <!-- container-fluid -->
+               @* </div> <!-- container-fluid -->*@
             </div>
             <!-- End Page-content -->
 
-            @Html.Partial("~/Views/Shared/_footer.cshtml")
+            <partial name="~/Views/Shared/_footer.cshtml"/>
 
         </div>
         <!-- end main content-->
@@ -41,9 +46,9 @@
     </div>
     <!-- END layout-wrapper -->
 
-    @Html.Partial("~/Views/Shared/_right_sidebar.cshtml")
+    <partial name="~/Views/Shared/_right_sidebar.cshtml"/>
 
-    @*@ Html.Partial("~/Views/Shared/_vendor_scripts.cshtml")*@
+    @*@ Html.Partial("~/Views/Shared/_vendor_scripts.cshtml"/>*@
 
     @RenderSection("scripts", required: false)
 
