--- a/EasyLearn/Views/Shared/_topbar.cshtml
+++ b/EasyLearn/Views/Shared/_topbar.cshtml
@@ -226,6 +226,7 @@
                     </a>
                 </div>
             </div>
+
             <div class="dropdown d-none d-lg-inline-block ms-1">
                 <button type="button" class="btn header-item noti-icon waves-effect" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
@@ -283,14 +284,21 @@
 
                 <div class="ms-1">
                     <a asp-controller="Student" asp-action="RegisterStudent">
-                        <button type="button" class="btn text-dark fs-5 header-item noti-icon waves-effect">
+                        <button type="button" class="btn text-white fs-5 header-item noti-icon waves-effect">
                             Sign-up</button>
+                    </a>
+                </div>
+
+                <div class="ms-1">
+                    <a asp-controller="Home" asp-action="Login">
+                        <button type="button" class="btn text-white fs-5 header-item noti-icon waves-effect">
+                            Login</button>
                     </a>
                 </div>
 
             }
 
-            @if (User.FindFirst(ClaimTypes.NameIdentifier) == null)
+            @if (User.FindFirst(ClaimTypes.NameIdentifier) != null)
             {
 
 
@@ -389,13 +397,12 @@
                         </div>
                     </div>
                 </div>
-
+var profilePicture = $"~{User.FindFirst(ClaimTypes.UserData)?.Value}";
                 <div class="dropdown d-inline-block user-dropdown">
                     <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img class="rounded-circle header-profile-user" src="~/assets/images/users/avatar-2.jpg"
-                            alt="Header Avatar">
-                        <span class="d-none d-xl-inline-block ms-1">Kevin</span>
+                        <img class="rounded-circle header-profile-user" src=@profilePicture alt="Header Avatar">
+                        <span class="d-none d-xl-inline-block ms-1">@User.FindFirst(ClaimTypes.Name)?.Value</span>
                         <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
                     </button>
                     <div class="dropdown-menu dropdown-menu-end">
@@ -404,20 +411,19 @@
                         <a class="dropdown-item" href="#"><i class="ri-wallet-2-line align-middle me-1"></i> My Wallet</a>
                         <a class="dropdown-item d-block" href="#"><span class="badge bg-success float-end mt-1">11</span><i
                                 class="ri-settings-2-line align-middle me-1"></i> Settings</a>
-                        <a class="dropdown-item" href="#"><i class="ri-lock-unlock-line align-middle me-1"></i> Lock
-                            screen</a>
+                        <a class="dropdown-item" href="#"><i class="ri-lock-unlock-line align-middle me-1"></i> Lock screen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-danger" href="#"><i
+                        <a class="dropdown-item text-danger" href="/Logout"><i
                                 class="ri-shut-down-line align-middle me-1 text-danger"></i> Logout</a>
                     </div>
                 </div>
 
-                <div class="dropdown d-inline-block">
-                    <button type="button" class="btn header-item noti-icon right-bar-toggle waves-effect">
-                        <i class="ri-settings-2-line"></i>
-                    </button>
-                </div>
             }
+            <div class="dropdown d-inline-block">
+                <button type="button" class="btn header-item noti-icon right-bar-toggle waves-effect">
+                    <i class="ri-settings-2-line"></i>
+                </button>
+            </div>
         </div>
     </div>
 </header>
