--- a/EasyLearn/Views/Home/Login.cshtml
+++ b/EasyLearn/Views/Home/Login.cshtml
@@ -8,7 +8,7 @@
 
 <h1>Login</h1>
 
-<h4>LoginRequestModel</h4>
+<h4>Enter valid login details</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
