--- a/EasyLearn/Views/Shared/_topbar.cshtml
+++ b/EasyLearn/Views/Shared/_topbar.cshtml
@@ -5,21 +5,22 @@
         <div class="d-flex">
             <!-- LOGO -->
             <div class="navbar-brand-box">
-                <a href=@Url.Action("Index", "Dashboard") class="logo logo-dark">
+                @*<a href=@Url.Action("Index", "Dashboard") class="logo logo-dark">*@
+                <a asp-controller="Home" asp-action="index" class="logo logo-dark">
                     <span class="logo-sm">
-                        <img src="~/assets/images/logo-sm-dark.png" alt="logo-sm-dark" height="22">
+                        <img src="/uploads/logos/logo.jpg" alt="logo-sm-dark" height="22">
                     </span>
                     <span class="logo-lg">
-                        <img src="~/assets/images/logo-dark.png" alt="logo-dark" height="20">
+                        <img src="/uploads/logos/logo.jpg" alt="logo-dark" height="20">
                     </span>
                 </a>
 
-                <a href=@Url.Action("Index", "Dashboard") class="logo logo-light">
+                <a asp-controller="Home" asp-action="index" class="logo logo-light">
                     <span class="logo-sm">
-                        <img src="~/assets/images/logo-sm-light.png" alt="logo-sm-light" height="22">
+                        <img src="/uploads/logos/logo.jpg" alt="logo-sm-light" height="22">
                     </span>
                     <span class="logo-lg">
-                        <img src="~/assets/images/logo-light.png" alt="logo-light" height="20">
+                        <img src="/uploads/logos/logo.jpg" alt="logo-light" height="20">
                     </span>
                 </a>
             </div>
@@ -31,7 +32,7 @@
             <!-- App Search-->
             <form class="app-search d-none d-lg-block">
                 <div class="position-relative">
-                    <input type="text" class="form-control" placeholder="Search...">
+                    <input type="text" class="form-control" placeholder="Search anything...">
                     <span class="ri-search-line"></span>
                 </div>
             </form>
@@ -397,7 +398,7 @@
                         </div>
                     </div>
                 </div>
-var profilePicture = $"~{User.FindFirst(ClaimTypes.UserData)?.Value}";
+var profilePicture = $"{User.FindFirst(ClaimTypes.UserData)?.Value}";
                 <div class="dropdown d-inline-block user-dropdown">
                     <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -413,7 +414,7 @@ var profilePicture = $"~{User.FindFirst(ClaimTypes.UserData)?.Value}";
                                 class="ri-settings-2-line align-middle me-1"></i> Settings</a>
                         <a class="dropdown-item" href="#"><i class="ri-lock-unlock-line align-middle me-1"></i> Lock screen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-danger" href="/Logout"><i
+                        <a class="dropdown-item text-danger" asp-controller="Home" asp-action="Logout"><i
                                 class="ri-shut-down-line align-middle me-1 text-danger"></i> Logout</a>
                     </div>
                 </div>
