working on global search

--- a/EasyLearn/Views/Instructor/RegisterInstructor.cshtml
+++ b/EasyLearn/Views/Instructor/RegisterInstructor.cshtml
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-md-4 text-left">
 
-        @using (Html.BeginForm("egisterInstructor", "Instructor", FormMethod.Post, new
+        @using (Html.BeginForm("RegisterInstructor", "Instructor", FormMethod.Post, new
         {
             enctype = "multipart/form-data"
         }))
