--- a/EasyLearn/Views/Shared/_sidebar.cshtml
+++ b/EasyLearn/Views/Shared/_sidebar.cshtml
@@ -41,17 +41,56 @@
                             <span>Manage instructors</span>
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
-                            <li><a asp-controller="" asp-action="" active="false">Add new Instructor</a></li>
-                            <li><a asp-controller="" asp-action="" active="false">View all active</a></li>
+                            <li><a asp-controller="Instructor" asp-action="RegisterInstructor">Add new Instructor</a></li>
+                            <li><a asp-controller="Instructor" asp-action="GetAllActive">View all active</a></li>
 
-                            <li><a asp-controller="" asp-action="" active="false">View all inactive instructors</a></li>
+                            <li><a asp-controller="Instructor" asp-action="GetAllInActive">View all inactive instructors</a></li>
 
-                            <li><a asp-controller="" asp-action="" active="false">Moderate instructor</a></li>
+                            <li><a asp-controller="Instructor" asp-action="GetAll">Moderate instructor</a></li>
 
-                            <li><a asp-controller="" asp-action="" active="false">instructors bank details</a></li>
+                            <li><a asp-controller="Instructor" asp-action="ListOfBankDetail">instructors bank details</a></li>
                         </ul>
                     </li>
 
+
+
+
+                    <!--Manage Courses category-->
+                    <li>
+                        <a href="javascript: void(0);" class="has-arrow waves-effect">
+                            <i class="ri-book-2-line"></i>
+                            <span>Manage category</span>
+                        </a>
+                        <ul class="sub-menu" aria-expanded="false">
+                            <li><a asp-controller="Category" asp-action="Create">Add new category</a></li>
+                            <li><a asp-controller="Category" asp-action="GetAll">Active cotegory</a></li>
+
+                            <li><a asp-controller="Category" asp-action="">Inactive category</a></li>
+
+                            <li><a asp-controller="Category" asp-action="">Moderate instructor</a></li>
+
+                            <li><a asp-controller="Category" asp-action="">instructors bank details</a></li>
+                        </ul>
+                    </li>
+
+
+                    <!--Manage Courses -->
+                    <li>
+                        <a href="javascript: void(0);" class="has-arrow waves-effect">
+                            <i class="ri-book-2-line"></i>
+                            <span>Manage Courses</span>
+                        </a>
+                        <ul class="sub-menu" aria-expanded="false">
+                            <li><a asp-controller="Course" asp-action="Create">Add new course</a></li>
+                            <li><a asp-controller="Course" asp-action="GetAllActive">Active Course</a></li>
+
+                            <li><a asp-controller="Course" asp-action="GetAllInActive">View all inactive instructors</a></li>
+
+                            <li><a asp-controller="Course" asp-action="">Moderate instructor</a></li>
+
+                            <li><a asp-controller="Course" asp-action="">instructors bank details</a></li>
+                        </ul>
+                    </li>
 
                     <!--Manage students -->
                     <li>
@@ -60,9 +99,13 @@
                             <span>Manage students</span>
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
-                            <li><a asp-controller="" asp-action="" active="false">View all students</a></li>
+                            <li><a asp-controller="Student" asp-action="RegisterStudent">Add new student</a></li>
 
-                            <li><a asp-controller="" asp-action="" active="false">View all inactive students</a></li>
+                            <li><a asp-controller="Student" asp-action="Activestudent">Inactive students</a></li>
+
+                            <li><a asp-controller="Student" asp-action="Inactivestudent">Active students</a></li>
+
+                            <li><a asp-controller="Student" asp-action="">students</a></li>
 
 
 
@@ -78,8 +121,8 @@
                             <span>Manage transactions</span>
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
-                            <li><a asp-controller="" asp-action="" active="false">View recent transactions</a></li>
-                            <li><a asp-controller="" asp-action="" active="false">Pending transactions</a></li>
+                            <li><a asp-controller="" asp-action="">View recent transactions</a></li>
+                            <li><a asp-controller="" asp-action="">Pending transactions</a></li>
 
 
                         </ul>
@@ -95,9 +138,9 @@
                             <span>My Account</span>
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
-                            <li><a asp-controller="" asp-action="" active="false">Profile Update</a></li>
-                            <li><a asp-controller="" asp-action="" active="false">Change Password</a></li>
-                            <li><a asp-controller="" asp-action="" active="false">My Wallet</a></li>
+                            <li><a asp-controller="" asp-action="">Profile Update</a></li>
+                            <li><a asp-controller="" asp-action="">Change Password</a></li>
+                            <li><a asp-controller="" asp-action="">My Wallet</a></li>
 
                         </ul>
                     </li>
