--- a/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
+++ b/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
@@ -20,7 +20,7 @@
                         </a>
                     </li>
 
-                    <!--Manage moderators -->
+                    <!--Manage moderators
                     <li>
                         <a href="javascript: void(0);" class="has-arrow waves-effect">
                             <i class="ri-store-2-line"></i>
@@ -33,8 +33,9 @@
                             <li><a asp-controller="Moderator" asp-action="">Active Moderator Bank details</a></li>
                         </ul>
                     </li>
+                    -->
 
-                    <!--Manage Instrustors -->
+                    <!--Manage Instrustors 
                     <li>
                         <a href="javascript: void(0);" class="has-arrow waves-effect">
                             <i class="ri-book-2-line"></i>
@@ -52,10 +53,11 @@
                         </ul>
                     </li>
 
+                    -->
 
 
 
-                    <!--Manage Courses category-->
+                    <!--Manage Courses category
                     <li>
                         <a href="javascript: void(0);" class="has-arrow waves-effect">
                             <i class="ri-book-2-line"></i>
@@ -72,6 +74,7 @@
                             <li><a asp-controller="Category" asp-action="">instructors bank details</a></li>
                         </ul>
                     </li>
+                    -->
 
 
                     <!--Manage Courses -->
@@ -99,13 +102,15 @@
                             <span>Manage students</span>
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
+                        <!-- 
                             <li><a asp-controller="Student" asp-action="RegisterStudent">Add new student</a></li>
+                            <li><a asp-controller="Student" asp-action="">students</a></li>
+                        -->
 
                             <li><a asp-controller="Student" asp-action="Activestudent">Inactive students</a></li>
 
                             <li><a asp-controller="Student" asp-action="Inactivestudent">Active students</a></li>
 
-                            <li><a asp-controller="Student" asp-action="">students</a></li>
 
 
 
