--- a/EasyLearn/Views/Shared/_topbar.cshtml
+++ b/EasyLearn/Views/Shared/_topbar.cshtml
@@ -30,9 +30,9 @@
             </button>
 
             <!-- App Search-->
-            <form class="app-search d-none d-lg-block">
+            <form asp-controller="Course" asp-action="GlobalSearch" class="app-search d-none d-lg-block">
                 <div class="position-relative">
-                    <input type="text" class="form-control" placeholder="Search anything...">
+                    <input type="text" class="form-control" placeholder="Search anything..." name="name">
                     <span class="ri-search-line"></span>
                 </div>
             </form>
