--- a/EasyLearn/Views/Shared/Layouts/_layout_light_sidebar.cshtml
+++ b/EasyLearn/Views/Shared/Layouts/_layout_light_sidebar.cshtml
@@ -65,7 +65,7 @@
 
     <partial name="~/Views/Shared/_right_sidebar.cshtml"/>
 
-    @*@ Html.Partial("~/Views/Shared/_vendor_scripts.cshtml"/>*@
+    @*<partial name="~/Views/Shared/_vendor_scripts.cshtml"/>*@
 
     @RenderSection("scripts", required: false)
 
