--- a/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
+++ b/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
@@ -84,7 +84,7 @@
                             <span>Manage Courses</span>
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
-                            <li><a asp-controller="Course" asp-action="Create">Add new course</a></li>
+                            <li><a asp-controller="Course" asp-action="CreateCourse">Add new course</a></li>
                             <li><a asp-controller="Course" asp-action="GetAllActive">Active Course</a></li>
 
                             <li><a asp-controller="Course" asp-action="GetAllInActive">View all inactive instructors</a></li>
