--- a/EasyLearn/Views/Shared/_Moderatorsidebar.cshtml
+++ b/EasyLearn/Views/Shared/_Moderatorsidebar.cshtml
@@ -20,7 +20,8 @@
                         </a>
                     </li>
 
-                    <!--Manage moderators -->
+                    <!--Manage moderators
+                    
                     <li>
                         <a href="javascript: void(0);" class="has-arrow waves-effect">
                             <i class="ri-store-2-line"></i>
@@ -33,6 +34,9 @@
                             <li><a asp-controller="Moderator" asp-action="">Active Moderator Bank details</a></li>
                         </ul>
                     </li>
+                    -->
+
+
 
                     <!--Manage Instrustors -->
                     <li>
@@ -81,7 +85,7 @@
                             <span>Manage Courses</span>
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
-                            <li><a asp-controller="Course" asp-action="Create">Add new course</a></li>
+                            <li><a asp-controller="Course" asp-action="CreateCourse">Add new course</a></li>
                             <li><a asp-controller="Course" asp-action="GetAllActive">Active Course</a></li>
 
                             <li><a asp-controller="Course" asp-action="GetAllInActive">View all inactive instructors</a></li>
