--- a/EasyLearn/Views/Shared/_topbar.cshtml
+++ b/EasyLearn/Views/Shared/_topbar.cshtml
@@ -408,7 +408,7 @@ var profilePicture = $"{User.FindFirst(ClaimTypes.UserData)?.Value}";
                     </button>
                     <div class="dropdown-menu dropdown-menu-end">
                         <!-- item-->
-                        <a class="dropdown-item" href="#"><i class="ri-user-line align-middle me-1"></i> Profile</a>
+                        <a class="dropdown-item" asp-controller="@User.FindFirst(ClaimTypes.Role)?.Value" asp-action="Detail" asp-route-id="@User.FindFirst(ClaimTypes.NameIdentifier)?.Value"><i class="ri-user-line align-middle me-1"></i> Profile</a>
                         <a class="dropdown-item" href="#"><i class="ri-wallet-2-line align-middle me-1"></i> My Wallet</a>
                         <a class="dropdown-item d-block" href="#"><span class="badge bg-success float-end mt-1">11</span><i
                                 class="ri-settings-2-line align-middle me-1"></i> Settings</a>
